logging-api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/internal-proxy: "true"
    io.kompose.service: logging-api
  name: logging-api
spec:
  containers:
  - args:
    - mock
    - -d
    - -h
    - 0.0.0.0
    - /app/openapi.yaml
    image: maanuelmm/prism:latest
    name: logging-api
    resources: {}
    volumeMounts:
    - mountPath: /app
      name: logging-api-claim0
      readOnly: true
  restartPolicy: OnFailure
  volumes:
  - name: logging-api-claim0
    persistentVolumeClaim:
      claimName: logging-api-claim0
      readOnly: true
status: {}
