k8s.yaml
# I think using Helm could be the best option, but right now I don't have enough time to implement that. That's why this
# k8s file seems so chaotic in comparison with something more elegant like Helm. It's something I want to research and
# develop in future projects.
---
# Before continuing with the storage specification: it's possible to use a PodPreset to accomplish the shared volume mount,
# however, it's in alpha state, and to activate this, it's a headache depending on the k8s environment we're working on.
# That's the reason I decided to use the more "traditional" PersistentVolume and PersistentVolumeClaim to share a volume
# across all pods.
#
# The advantage of PodPreset over defined volumes is that isn't necessary to set a storage capacity and claiming then, and
# the way it works is like a template or the more well-known inheritance in object-oriented programming languages, defining
# the local volume on that preset and then being used by all the pods which have been referenced.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-api
spec:
  selector:
    matchLabels:
      app: logging-api
  replicas: 1
  template:
    metadata:
      labels:
        app: logging-api
    spec:
      containers:
        - name: logging-api
          image: maanuelmm/prism:tini
          args:
            - mock 
            - -d
            - -h
            - 0.0.0.0
            - /app/openapi.yaml
          volumeMounts:
            - mountPath: /app
              name: logging-api-spec
              subPath: app/logging-api/specification
              readOnly: true
          ports:
            - containerPort: 4010
      volumes:
        - name: logging-api-spec
          persistentVolumeClaim:
            claimName: shared-claim
---
apiVersion: v1
kind: Service
metadata:
  name: logging-api
  labels:
    app: logging-api
spec:
  ports:
    - name: "logging-api"
      port: 80
      targetPort: 4010
  selector:
    app: logging-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  selector:
    matchLabels:
      app: products-api
  replicas: 1
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
        - name: products-api
          image: maanuelmm/prism:tini
          args:
            - mock 
            - -d
            - -h
            - 0.0.0.0
            - /app/openapi.yaml
          volumeMounts:
            - mountPath: /app
              name: products-api-spec
              subPath: app/products-api/specification
              readOnly: true
          ports:
            - containerPort: 4010
      volumes:
        - name: products-api-spec
          persistentVolumeClaim:
            claimName: shared-claim
---
apiVersion: v1
kind: Service
metadata:
  name: products-api
  labels:
    app: products-api
spec:
  ports:
    - name: "products-api"
      port: 80
      targetPort: 4010
  selector:
    app: products-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
spec:
  selector:
    matchLabels:
      app: orders-api
  replicas: 1
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
        - name: orders-api
          image: maanuelmm/prism:tini
          args:
            - mock 
            - -d
            - -h
            - 0.0.0.0
            - /app/openapi.json
          volumeMounts:
            - mountPath: /app
              name: orders-api-spec
              subPath: app/orders-api/specification
              readOnly: true
          ports:
            - containerPort: 4010
      volumes:
        - name: orders-api-spec
          persistentVolumeClaim:
            claimName: shared-claim
---
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  labels:
    app: orders-api
spec:
  ports:
    - name: "orders-api"
      port: 80
      targetPort: 4010
  selector:
    app: orders-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoicing-api
spec:
  selector:
    matchLabels:
      app: invoicing-api
  replicas: 1
  template:
    metadata:
      labels:
        app: invoicing-api
    spec:
      containers:
        - name: invoicing-api
          image: maanuelmm/prism:tini
          args:
            - mock 
            - -d
            - -h
            - 0.0.0.0
            - /app/openapi.yaml
          volumeMounts:
            - mountPath: /app
              name: invoicing-api-spec
              subPath: app/invoicing-api/specification
              readOnly: true
          ports:
            - containerPort: 4010
      volumes:
        - name: invoicing-api-spec
          persistentVolumeClaim:
            claimName: shared-claim
---
apiVersion: v1
kind: Service
metadata:
  name: invoicing-api
  labels:
    app: invoicing-api
spec:
  ports:
    - name: "invoicing-api"
      port: 80
      targetPort: 4010
  selector:
    app: invoicing-api
---
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  labels:
    app: swagger-ui
spec:
  #type: LoadBalancer # (or even NodePort). More info: http://alesnosek.com/blog/2017/02/14/accessing-kubernetes-pods-from-outside-of-the-cluster/ https://kubernetes.io/docs/tutorials/stateless-application/expose-external-ip-address/ https://kubernetes.io/docs/concepts/services-networking/connect-applications-service/
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
  selector:
    app: swagger-ui
