test.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  labels:
    run: swagger-ui
spec:
  type: LoadBalancer # http://alesnosek.com/blog/2017/02/14/accessing-kubernetes-pods-from-outside-of-the-cluster/ https://kubernetes.io/docs/tutorials/stateless-application/expose-external-ip-address/ https://kubernetes.io/docs/concepts/services-networking/connect-applications-service/
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    run: swagger-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
spec:
  selector:
    matchLabels:
      run: swagger-ui
      #role: master
      #tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        run: swagger-ui
        #role: master
        #tier: backend
    spec:
      containers:
      - name: swagger-ui
        image: swaggerapi/swagger-ui:v3.25.2
        volumeMounts:
        - mountPath: /usr/share/nginx/html/app
          name: swagger-ui-specs
          readOnly: true
        ports:
          - containerPort: 8080
      #restartPolicy: OnFailure # seems to be unsupported on Deployment (only Always is the supported value regarding being supported on Pod)
      volumes: # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
      - name: swagger-ui-specs
        hostPath:
          # directory location on host
          path: ./app
          # this field is optional
          #type: Directory
