traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
    traefik.docker.network: external-proxy
    traefik.http.routers.traefik.rule: Host(`traefik.localhost`)
    traefik.http.services.traefik.loadbalancer.server.port: "8080"
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: traefik
status:
  loadBalancer: {}
